// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Example tests > ABS(1) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 1 │
└───┴───┘
"
`;

exports[`Example tests > ACOS(1) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 0 │
└───┴───┘
"
`;

exports[`Example tests > ACOSH(1) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 0 │
└───┴───┘
"
`;

exports[`Example tests > ADD(1, 2) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 3 │
└───┴───┘
"
`;

exports[`Example tests > ASIN(1) 1`] = `
"
┌───┬────────────────────┐
│   │ A                  │
├───┼────────────────────┤
│ 1 │ 1.5707963267948966 │
└───┴────────────────────┘
"
`;

exports[`Example tests > ASINH(1) 1`] = `
"
┌───┬───────────────────┐
│   │ A                 │
├───┼───────────────────┤
│ 1 │ 0.881373587019543 │
└───┴───────────────────┘
"
`;

exports[`Example tests > ATAN(1) 1`] = `
"
┌───┬────────────────────┐
│   │ A                  │
├───┼────────────────────┤
│ 1 │ 0.7853981633974483 │
└───┴────────────────────┘
"
`;

exports[`Example tests > ATAN2(1, 1) 1`] = `
"
┌───┬────────────────────┐
│   │ A                  │
├───┼────────────────────┤
│ 1 │ 0.7853981633974483 │
└───┴────────────────────┘
"
`;

exports[`Example tests > ATANH(1) 1`] = `
"
┌───┬──────────┐
│   │ A        │
├───┼──────────┤
│ 1 │ Infinity │
└───┴──────────┘
"
`;

exports[`Example tests > CBRT(1) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 1 │
└───┴───┘
"
`;

exports[`Example tests > CEIL(1.5) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 2 │
└───┴───┘
"
`;

exports[`Example tests > CLZ32(1) 1`] = `
"
┌───┬────┐
│   │ A  │
├───┼────┤
│ 1 │ 31 │
└───┴────┘
"
`;

exports[`Example tests > COS(1) 1`] = `
"
┌───┬────────────────────┐
│   │ A                  │
├───┼────────────────────┤
│ 1 │ 0.5403023058681398 │
└───┴────────────────────┘
"
`;

exports[`Example tests > COSH(1) 1`] = `
"
┌───┬────────────────────┐
│   │ A                  │
├───┼────────────────────┤
│ 1 │ 1.5430806348152437 │
└───┴────────────────────┘
"
`;

exports[`Example tests > DIVIDE(6, 3) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 2 │
└───┴───┘
"
`;

exports[`Example tests > EXP(1) 1`] = `
"
┌───┬───────────────────┐
│   │ A                 │
├───┼───────────────────┤
│ 1 │ 2.718281828459045 │
└───┴───────────────────┘
"
`;

exports[`Example tests > FLOOR(1.5) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 1 │
└───┴───┘
"
`;

exports[`Example tests > IMUL(1, 2) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 2 │
└───┴───┘
"
`;

exports[`Example tests > LOG(1) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 0 │
└───┴───┘
"
`;

exports[`Example tests > LOG10(1) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 0 │
└───┴───┘
"
`;

exports[`Example tests > MOD(5, 2) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 1 │
└───┴───┘
"
`;

exports[`Example tests > MULTIPLY(2, 3) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 6 │
└───┴───┘
"
`;

exports[`Example tests > PI() 1`] = `
"
┌───┬───────────────────┐
│   │ A                 │
├───┼───────────────────┤
│ 1 │ 3.141592653589793 │
└───┴───────────────────┘
"
`;

exports[`Example tests > POWER(2, 3) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 8 │
└───┴───┘
"
`;

exports[`Example tests > PRODUCT(2, 3, 4) 1`] = `
"
┌───┬────┐
│   │ A  │
├───┼────┤
│ 1 │ 24 │
└───┴────┘
"
`;

exports[`Example tests > ROUND(1.5) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 2 │
└───┴───┘
"
`;

exports[`Example tests > ROUND(PI(), 2) 1`] = `
"
┌───┬──────┐
│   │ A    │
├───┼──────┤
│ 1 │ 3.14 │
└───┴──────┘
"
`;

exports[`Example tests > SIN(1) 1`] = `
"
┌───┬────────────────────┐
│   │ A                  │
├───┼────────────────────┤
│ 1 │ 0.8414709848078965 │
└───┴────────────────────┘
"
`;

exports[`Example tests > SINH(1) 1`] = `
"
┌───┬────────────────────┐
│   │ A                  │
├───┼────────────────────┤
│ 1 │ 1.1752011936438014 │
└───┴────────────────────┘
"
`;

exports[`Example tests > SQRT(1) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 1 │
└───┴───┘
"
`;

exports[`Example tests > SUBTRACT(2, 1) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 1 │
└───┴───┘
"
`;

exports[`Example tests > SUM(1, 2, 3) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 6 │
└───┴───┘
"
`;

exports[`Example tests > TAN(1) 1`] = `
"
┌───┬────────────────────┐
│   │ A                  │
├───┼────────────────────┤
│ 1 │ 1.5574077246549023 │
└───┴────────────────────┘
"
`;

exports[`Example tests > TANH(1) 1`] = `
"
┌───┬────────────────────┐
│   │ A                  │
├───┼────────────────────┤
│ 1 │ 0.7615941559557649 │
└───┴────────────────────┘
"
`;

exports[`Example tests > TAU() 1`] = `
"
┌───┬───────────────────┐
│   │ A                 │
├───┼───────────────────┤
│ 1 │ 6.283185307179586 │
└───┴───────────────────┘
"
`;

exports[`Example tests > TRUNC(1) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 1 │
└───┴───┘
"
`;
